Add SignIn, SignUp overlay form and Subjects DropDown

--- a/WebContent/app/css/_variables.scss
+++ b/WebContent/app/css/_variables.scss
@@ -28,6 +28,6 @@ $shadow5: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 $shadow6: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
   rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
   rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-$shadow7: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
-  rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+$shadow7: $lightBlue 0px 30px 60px -12px inset,
+  $lightBlue 0px 18px 36px -18px inset;
 $toast-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
