--- a/WebContent/app/css/_globals.scss
+++ b/WebContent/app/css/_globals.scss
@@ -155,26 +155,45 @@ select {
   padding: 0.5rem 1rem;
   border-radius: 5px;
   transition: all ease-in-out 0.15s;
+  outline: 1px solid $lightBlue;
   &:focus {
+    outline: 1.5px solid $lightBlue;
     transform: scale(1.005);
     box-shadow: $shadow3;
   }
 }
 .input-with-icon {
-  font-size: 1.1rem;
+  font-size: 1rem;
   padding: 1rem;
-  padding-left: 3.3rem;
+  padding-left: 3rem;
   width: 100%;
   background-repeat: no-repeat;
   background-size: 1.2rem;
-  background-position: 1rem 1.2rem;
+  background-position: 1rem 1rem;
+  &:not(:first-child) {
+    margin-top: 1.2rem;
+  }
+}
+.user_name{
+  background-image: url(../../images/id-card.png);
+}
+.user_fname{
+  margin-right: 0.5rem;
 }
 .user_id {
   background-image: url(../../images/avatar.png);
 }
 .user_pass {
   background-image: url(../../images/padlock.png);
-  margin-top: 1.2rem;
+}
+.user_email{
+  background-image: url(../../images/email.png);
+}
+.user_tel{
+  background-image: url(../../images/telephone.png);
+}
+.user_gender{
+  background-image: url(../../images/stick-man.png);
 }
 //Visibility
 .hide-for-mobile {
@@ -199,6 +218,7 @@ select {
   font-size: 2rem;
   line-height: 1.5;
   text-align: center;
+  width: 100%;
 }
 table {
   border-collapse: collapse;
@@ -281,30 +301,6 @@ tbody tr:nth-child(even) {
     width: calc(100% - 2.4rem);
     height: 80vh;
     padding: 0 0.7rem 0.7rem 0.7rem;
-  }
-  .scrollable {
-    width: 100%;
-    position: static;
-    max-height: 65vh;
-    overflow-y: scroll;
-    scrollbar-color: auto;
-    scrollbar-width: thin;
-    @include breakpoint-down(medium) {
-      max-height: 65vh;
-      overflow-y: visible;
-      overflow-x: scroll;
-    }
-    &::-webkit-scrollbar {
-      width: 0.5rem;
-      height: 0.5rem;
-    }
-    &::-webkit-scrollbar-track {
-      background: $kindaPink;
-    }
-    &::-webkit-scrollbar-thumb {
-      background: $lightPurple;
-      border-radius: 0.1rem;
-    }
   }
   .cross {
     cursor: pointer;
@@ -404,6 +400,29 @@ tbody tr:nth-child(even) {
   font-family: monospace;
   font-size: 1.5rem;
 }
+.scrollable {
+    width: 100%;
+    max-height: 65vh;
+    overflow-y: scroll;
+    scrollbar-color: auto;
+    scrollbar-width: thin;
+    @include breakpoint-down(medium) {
+      max-height: 65vh;
+      overflow-y: visible;
+      overflow-x: scroll;
+    }
+    &::-webkit-scrollbar {
+      width: 0.5rem;
+      height: 0.5rem;
+    }
+    &::-webkit-scrollbar-track {
+      background: $lightBlue;
+    }
+    &::-webkit-scrollbar-thumb {
+      background: $lightPurple;
+      border-radius: 0.4rem;
+    }
+  }
 .reveal {
   animation: reveal ease-in-out 0.3s forwards;
 }
