--- a/WebContent/app/css/_header.scss
+++ b/WebContent/app/css/_header.scss
@@ -42,7 +42,8 @@
     }
   }
   &__links {
-    a {
+    position: relative;
+    .underlined {
       position: relative;
       font-size: $font-med;
       color: $dark;
@@ -67,7 +68,114 @@
         }
       }
     }
+    .nav-dd{
+      background-color: $white;
+      box-shadow: $shadow2;
+      border-radius: 0.25rem;
+      position: absolute;
+      width: 10rem;
+      max-height: 85vh;
+      overflow-y: hidden;
+      top: 3rem;
+      left: 0;
+      display: none;
+      &:hover{
+        display: block;
+      }
+      ul,li{
+        list-style: none;
+        margin: 0;
+        padding: 0;
+      }
+      li{
+        padding: 0.5rem 1rem;
+      }
+      a{
+        color: $dark;
+        display: inline-block;
+        width: 96.5%;
+        height: 100%;
+      }
+      &_course{
+        border-radius: 0.25rem;
+        position: relative;
+        &:first-child{
+          border-top: 0.5rem;
+        }
+        &:last-child{
+          border-bottom: 0.5rem;
+        }
+        &:hover,&:active{
+          background-color: $lightBlue;
+          .nav-dd_course_durations{
+            display: block;
+          }
+          &::after{
+            right: 0.8rem;
+          }
+        }
+        &::after{
+          content: ">";
+          font-weight: bold;
+          font-family: monospace;
+          font-size: 1.2rem;
+          position: absolute;
+          right: 1rem;
+          transition: all ease-in-out 0.2s;
+        }
+      }
+      &_course_durations{
+        position: absolute;
+        top: 0;
+        left: 10rem;
+        width: 10rem;
+        background-color: $white;
+        box-shadow: $shadow2;
+        border-radius: 0.5rem;
+        display: none;
+        padding: 2rem;
+        .nav-dd_course_duration{
+          border-radius: 0.25rem;
+            &:hover,&:active{
+              background-color: $lightBlue;
+              .nav-dd_course_duration_subjects{
+                display: block;
+              }
+              &:after{
+                right: 0.8rem;
+              }
+            }
+            &::after{
+            content: ">";
+            font-weight: bold;
+            font-family: monospace;
+            font-size: 1.2rem;
+            position: absolute;
+            right: 1rem;
+            transition: all ease-in-out 0.2s;
+          }
+        }
+      }
+      &_course_duration_subjects{
+        display: none;
+        position: absolute;
+        width: 10rem;
+        padding: 1rem;
+        top: 0;
+        left: 10rem;
+        background-color: $white;
+        box-shadow: $shadow2;
+        border-radius: 0.5rem;
+      }
+      &_course_duration_subject{
+        border-radius: 0.25rem;
+        &:hover{
+          background-color: $lightBlue;
+        }
+      }
+    }
     &_dropdown {
+      position: relative;
       &:hover {
         &::before {
           visibility: hidden;
@@ -142,36 +250,96 @@
     }
   }
   .overlaydiv {
-    display: flex;
-    flex-flow: column wrap;
+    border-radius: 0;
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+    background-color: rgba($color: #000000, $alpha: 0.7);
+    .cross{
+        top: 0.8rem;
+        background-color: $white;
+        padding: 0.7rem 0.2rem 0.7rem 0.7rem;
+        border-radius: 50%;
+    }
     .signup-form {
-      overflow-x: hidden;
-      overflow-y: hidden;
-      width: 85%;
-      margin: 0 auto;
+      position: relative;
+      top: 4rem;
+      height: max-content;
+      max-height: 90%;
+      width: 45%;
+      padding: 1rem 0;
       box-shadow: $shadow1;
+      background-color: $white;
       border-radius: 1rem;
-      .tab-selector {
-        width: 100%;
-        height: 20%;
-        background-color: $lightBlue;
-        display: flex;
-        &_signin,
-        &_signup {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          flex: 1;
-          height: 100%;
-          text-align: center;
-          padding: 1rem;
+      margin: 0 auto;
+      .signup-container{
+          max-height: 80vh;
+          overflow-y: scroll;
+          overflow-x: unset;
+          .tab-selector {
+            width: calc(100% - 2rem);
+            margin-right: 2rem;
+            border-top-left-radius: inherit;
+            border-top-right-radius: inherit;
+            margin: 0 auto;
+            height: 3rem;
+            background-color: $lightBlue;
+            display: flex;
+            &_signin,
+            &_signup {
+              cursor: pointer;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              flex: 1;
+              text-align: center;
+              padding: 1rem;
+              &:hover{
+                color: $darkBlue;
+              }
+            }
+          &_selected{
+            background-color: $white;
+            box-shadow: $shadow7;
+          }
+          &_signin{
+            border-top-left-radius: inherit;
+          }
+          &_signup{
+            border-top-right-radius: inherit;
+          }
+        }
+        .signin,
+        .signup {
+          width: calc(100% - 3rem);
+          margin: 2rem;
+          p{
+              display: block;
+              width: 100%;
+              text-align: center;
+          }
         }
       }
-      .signin,
-      .signup {
-        width: 80%;
-        margin: 2rem auto;
-      }
+      
+    }
+  }
+}
+@include breakpoint-down(medium) {
+  .header{
+    .overlaydiv{
+      .signup-form{
+        width: 100%;
+         .signup-container{
+           .tab-selector {
+            width: calc(100% - 1rem);
+           }
+            .signin,
+            .signup {
+              width: auto;
+              margin: 2rem 0.5rem 0 0.5rem;
+            }
+          }
+        }
     }
   }
 }
