--- a/WebContent/app/css/_adminSideBar.scss
+++ b/WebContent/app/css/_adminSideBar.scss
@@ -12,7 +12,7 @@
   padding-bottom: 3.5rem;
   height: 90.6vh;
   margin-top: -10px;
-  overflow-y: scroll;
+  overflow-y: auto;
   scrollbar-color: auto;
   scrollbar-width: thin;
   &::-webkit-scrollbar {
