--- a/WebContent/app/css/style.css
+++ b/WebContent/app/css/style.css
@@ -270,7 +270,7 @@ html {
 *,
 *::before,
 *::after {
-  box-sizing: inherit;
+  box-sizing: border-box;
 }
 
 a,
@@ -695,7 +695,7 @@ tbody tr:nth-child(even) {
 .scrollable {
   width: 100%;
   max-height: 65vh;
-  overflow-y: scroll;
+  overflow-y: auto;
   scrollbar-color: auto;
   scrollbar-width: thin;
 }
@@ -833,114 +833,9 @@ tbody tr:nth-child(even) {
   -webkit-animation: highlight ease-in-out 0.25s forwards;
           animation: highlight ease-in-out 0.25s forwards;
 }
-.header__links .nav-dd {
-  background-color: #fff;
-  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
-  border-radius: 0.25rem;
-  position: absolute;
-  width: 10rem;
-  max-height: 85vh;
-  overflow-y: hidden;
-  top: 3rem;
-  left: 0;
-  display: none;
-}
-.header__links .nav-dd:hover {
-  display: block;
-}
-.header__links .nav-dd ul, .header__links .nav-dd li {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-.header__links .nav-dd li {
-  padding: 0.5rem 1rem;
-}
-.header__links .nav-dd a {
-  color: #222;
-  display: inline-block;
-  width: 96.5%;
-  height: 100%;
-}
-.header__links .nav-dd_course {
-  border-radius: 0.25rem;
-  position: relative;
-}
-.header__links .nav-dd_course:first-child {
-  border-top: 0.5rem;
-}
-.header__links .nav-dd_course:last-child {
-  border-bottom: 0.5rem;
-}
-.header__links .nav-dd_course:hover, .header__links .nav-dd_course:active {
-  background-color: #d7e3f5;
-}
-.header__links .nav-dd_course:hover .nav-dd_course_durations, .header__links .nav-dd_course:active .nav-dd_course_durations {
-  display: block;
-}
-.header__links .nav-dd_course:hover::after, .header__links .nav-dd_course:active::after {
-  right: 0.8rem;
-}
-.header__links .nav-dd_course::after {
-  content: ">";
-  font-weight: bold;
-  font-family: monospace;
-  font-size: 1.2rem;
-  position: absolute;
-  right: 1rem;
-  transition: all ease-in-out 0.2s;
-}
-.header__links .nav-dd_course_durations {
-  position: absolute;
-  top: 0;
-  left: 10rem;
-  width: 10rem;
-  background-color: #fff;
-  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
-  border-radius: 0.5rem;
-  display: none;
-  padding: 2rem;
-}
-.header__links .nav-dd_course_durations .nav-dd_course_duration {
-  border-radius: 0.25rem;
-}
-.header__links .nav-dd_course_durations .nav-dd_course_duration:hover, .header__links .nav-dd_course_durations .nav-dd_course_duration:active {
-  background-color: #d7e3f5;
-}
-.header__links .nav-dd_course_durations .nav-dd_course_duration:hover .nav-dd_course_duration_subjects, .header__links .nav-dd_course_durations .nav-dd_course_duration:active .nav-dd_course_duration_subjects {
-  display: block;
-}
-.header__links .nav-dd_course_durations .nav-dd_course_duration:hover:after, .header__links .nav-dd_course_durations .nav-dd_course_duration:active:after {
-  right: 0.8rem;
-}
-.header__links .nav-dd_course_durations .nav-dd_course_duration::after {
-  content: ">";
-  font-weight: bold;
-  font-family: monospace;
-  font-size: 1.2rem;
-  position: absolute;
-  right: 1rem;
-  transition: all ease-in-out 0.2s;
-}
-.header__links .nav-dd_course_duration_subjects {
-  display: none;
-  position: absolute;
-  width: 10rem;
-  padding: 1rem;
-  top: 0;
-  left: 10rem;
-  background-color: #fff;
-  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
-  border-radius: 0.5rem;
-}
-.header__links .nav-dd_course_duration_subject {
-  border-radius: 0.25rem;
-}
-.header__links .nav-dd_course_duration_subject:hover {
-  background-color: #d7e3f5;
-}
 .header__links_dropdown {
   position: relative;
+  font-size: 1.5rem;
 }
 .header__links_dropdown:hover::before {
   visibility: hidden;
@@ -948,7 +843,99 @@ tbody tr:nth-child(even) {
 .header__links_dropdown:hover .dropdown-arrow {
   transition: all ease-in-out 0.2s;
   position: relative;
-  top: 0.1rem;
+  top: 0rem;
+}
+.header__links_dropdown:active .dropdown-arrow {
+  color: #aa2ee6;
+  top: 0.3rem;
+}
+.header__links .nav-dd {
+  position: absolute;
+  top: 3rem;
+  left: 0;
+  max-height: 85vh;
+  display: none;
+}
+.header__links .nav-dd:hover {
+  display: block;
+}
+.header__links .nav-dd ul, .header__links .nav-dd li {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.header__links .nav-dd_courses, .header__links .nav-dd_durations, .header__links .nav-dd_subjects {
+  display: none;
+  position: absolute;
+  top: 0;
+  background-color: #fff;
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+  width: 11rem;
+  border-radius: 0.25rem;
+}
+.header__links .nav-dd_courses:hover, .header__links .nav-dd_durations:hover, .header__links .nav-dd_subjects:hover {
+  display: block;
+}
+.header__links .nav-dd_duration, .header__links .nav-dd_subject {
+  display: none;
+}
+.header__links .nav-dd_course, .header__links .nav-dd_duration, .header__links .nav-dd_subject {
+  position: static;
+}
+.header__links .nav-dd_course a, .header__links .nav-dd_duration a, .header__links .nav-dd_subject a {
+  color: #222;
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  width: 97%;
+  cursor: pointer;
+}
+.header__links .nav-dd_course:hover, .header__links .nav-dd_duration:hover, .header__links .nav-dd_subject:hover {
+  background-color: #d7e3f5;
+  border-radius: 0.25rem;
+}
+.header__links .nav-dd_courses {
+  overflow-y: auto;
+}
+.header__links .nav-dd_durations {
+  top: 0;
+  left: 11rem;
+}
+.header__links .nav-dd_subjects {
+  top: 0;
+  left: 22rem;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  max-height: 85vh;
+  max-width: 20rem;
+  overflow-y: auto;
+}
+.header__links .nav-dd_subject a {
+  color: #222;
+  width: 100%;
+}
+.header__links .nav-dd_subject a:hover {
+  color: #23049d;
+}
+.header__links .nav-dd_course, .header__links .nav-dd_duration {
+  position: relative;
+}
+.header__links .nav-dd_course::after, .header__links .nav-dd_duration::after {
+  position: absolute;
+  top: 0.3rem;
+  right: 1rem;
+  content: ">";
+  font-weight: bold;
+  font-family: monospace;
+  font-size: 1.5rem;
+  transition: all ease-in-out 0.2s;
+}
+.header__links .nav-dd_course:hover::after, .header__links .nav-dd_duration:hover::after {
+  color: #23049d;
+}
+.header__links .nav-dd_course:active::after, .header__links .nav-dd_duration:active::after {
+  color: #aa2ee6;
+  right: 0.7rem;
 }
 .header.open .header__menu > span:first-child {
   transform: rotate(45deg);
