--- a/WebContent/app/css/_globals.scss
+++ b/WebContent/app/css/_globals.scss
@@ -174,10 +174,10 @@ select {
     margin-top: 1.2rem;
   }
 }
-.user_name{
+.user_name {
   background-image: url(../../images/id-card.png);
 }
-.user_fname{
+.user_fname {
   margin-right: 0.5rem;
 }
 .user_id {
@@ -186,13 +186,13 @@ select {
 .user_pass {
   background-image: url(../../images/padlock.png);
 }
-.user_email{
+.user_email {
   background-image: url(../../images/email.png);
 }
-.user_tel{
+.user_tel {
   background-image: url(../../images/telephone.png);
 }
-.user_gender{
+.user_gender {
   background-image: url(../../images/stick-man.png);
 }
 //Visibility
@@ -399,30 +399,81 @@ tbody tr:nth-child(even) {
   font-weight: bold;
   font-family: monospace;
   font-size: 1.5rem;
+  margin: 0.2rem;
 }
 .scrollable {
-    width: 100%;
+  width: 100%;
+  max-height: 65vh;
+  overflow-y: auto;
+  scrollbar-color: auto;
+  scrollbar-width: thin;
+  @include breakpoint-down(medium) {
     max-height: 65vh;
-    overflow-y: auto;
-    scrollbar-color: auto;
-    scrollbar-width: thin;
-    @include breakpoint-down(medium) {
-      max-height: 65vh;
-      overflow-y: visible;
-      overflow-x: scroll;
-    }
-    &::-webkit-scrollbar {
-      width: 0.5rem;
-      height: 0.5rem;
-    }
-    &::-webkit-scrollbar-track {
-      background: $lightBlue;
-    }
-    &::-webkit-scrollbar-thumb {
-      background: $lightPurple;
-      border-radius: 0.4rem;
-    }
+    overflow-y: visible;
+    overflow-x: scroll;
   }
+  &::-webkit-scrollbar {
+    width: 0.5rem;
+    height: 0.5rem;
+  }
+  &::-webkit-scrollbar-track {
+    background: $lightBlue;
+  }
+  &::-webkit-scrollbar-thumb {
+    background: $lightPurple;
+    border-radius: 0.4rem;
+  }
+}
+.notification_bell {
+  position: relative;
+  height: 1.8rem;
+  img {
+    height: 100%;
+    width: auto;
+  }
+  .notification_badge {
+    position: absolute;
+    display: flex;
+    text-align: center;
+    align-content: center;
+    right: 0;
+    width: 1rem;
+    padding: 0.1rem;
+    top: 0;
+    background-color: $lightPurple;
+    color: white;
+    border-radius: 50%;
+    font-size: 0.6rem;
+    font-weight: bold;
+  }
+}
+.avatar {
+  height: 2.5rem;
+  border-radius: 50%;
+  cursor: pointer;
+  padding: 0.12rem;
+  display: flex;
+  justify-content: center;
+  border: 2px solid $dark;
+  img {
+    display: block;
+    width: auto;
+    height: 100%;
+    border-radius: 50%;
+  }
+}
+.overlay-background{
+  display: none;
+  background-color: rgba($color: #000000, $alpha: 0.7);
+  position: fixed;
+  top: 0;
+  height: 100vh;
+  width: 100vw;
+  z-index: 20;
+  @include breakpoint-down(medium) {
+    display: block;
+  }
+}
 .reveal {
   animation: reveal ease-in-out 0.3s forwards;
 }
