--- a/WebContent/app/css/_variables.scss
+++ b/WebContent/app/css/_variables.scss
@@ -30,4 +30,5 @@ $shadow6: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
   rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 $shadow7: $lightBlue 0px 30px 60px -12px inset,
   $lightBlue 0px 18px 36px -18px inset;
+$shadow8: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
 $toast-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
