--- a/WebContent/app/css/admin-styles.css
+++ b/WebContent/app/css/admin-styles.css
@@ -690,6 +690,7 @@ tbody tr:nth-child(even) {
   font-weight: bold;
   font-family: monospace;
   font-size: 1.5rem;
+  margin: 0.2rem;
 }
 
 .scrollable {
@@ -716,6 +717,61 @@ tbody tr:nth-child(even) {
 .scrollable::-webkit-scrollbar-thumb {
   background: #aa2ee6;
   border-radius: 0.4rem;
+}
+
+.notification_bell {
+  position: relative;
+  height: 1.8rem;
+}
+.notification_bell img {
+  height: 100%;
+  width: auto;
+}
+.notification_bell .notification_badge {
+  position: absolute;
+  display: flex;
+  text-align: center;
+  align-content: center;
+  right: 0;
+  width: 1rem;
+  padding: 0.1rem;
+  top: 0;
+  background-color: #aa2ee6;
+  color: white;
+  border-radius: 50%;
+  font-size: 0.6rem;
+  font-weight: bold;
+}
+
+.avatar {
+  height: 2.5rem;
+  border-radius: 50%;
+  cursor: pointer;
+  padding: 0.12rem;
+  display: flex;
+  justify-content: center;
+  border: 2px solid #222;
+}
+.avatar img {
+  display: block;
+  width: auto;
+  height: 100%;
+  border-radius: 50%;
+}
+
+.overlay-background {
+  display: none;
+  background-color: rgba(0, 0, 0, 0.7);
+  position: fixed;
+  top: 0;
+  height: 100vh;
+  width: 100vw;
+  z-index: 20;
+}
+@media (max-width: 59.9375em) {
+  .overlay-background {
+    display: block;
+  }
 }
 
 .reveal {
@@ -851,7 +907,7 @@ tbody tr:nth-child(even) {
 }
 .header__links .nav-dd {
   position: absolute;
-  top: 3rem;
+  top: 3.1rem;
   left: 0;
   max-height: 85vh;
   display: none;
@@ -863,6 +919,10 @@ tbody tr:nth-child(even) {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+.header__links .nav-dd .dropdown-caption {
+  background-color: #eee;
+  color: grey;
 }
 .header__links .nav-dd_courses, .header__links .nav-dd_durations, .header__links .nav-dd_subjects {
   display: none;
@@ -876,18 +936,18 @@ tbody tr:nth-child(even) {
 .header__links .nav-dd_courses:hover, .header__links .nav-dd_durations:hover, .header__links .nav-dd_subjects:hover {
   display: block;
 }
+.header__links .nav-dd_courses a, .header__links .nav-dd_durations a, .header__links .nav-dd_subjects a {
+  color: #222;
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  width: 100%;
+  cursor: pointer;
+}
 .header__links .nav-dd_duration, .header__links .nav-dd_subject {
   display: none;
 }
 .header__links .nav-dd_course, .header__links .nav-dd_duration, .header__links .nav-dd_subject {
   position: static;
-}
-.header__links .nav-dd_course a, .header__links .nav-dd_duration a, .header__links .nav-dd_subject a {
-  color: #222;
-  display: inline-block;
-  padding: 0.5rem 1rem;
-  width: 97%;
-  cursor: pointer;
 }
 .header__links .nav-dd_course:hover, .header__links .nav-dd_duration:hover, .header__links .nav-dd_subject:hover {
   background-color: #d7e3f5;
@@ -917,10 +977,10 @@ tbody tr:nth-child(even) {
 .header__links .nav-dd_subject a:hover {
   color: #23049d;
 }
-.header__links .nav-dd_course, .header__links .nav-dd_duration {
+.header__links .nav-dd_course a, .header__links .nav-dd_duration a {
   position: relative;
 }
-.header__links .nav-dd_course::after, .header__links .nav-dd_duration::after {
+.header__links .nav-dd_course a::after, .header__links .nav-dd_duration a::after {
   position: absolute;
   top: 0.3rem;
   right: 1rem;
@@ -930,10 +990,10 @@ tbody tr:nth-child(even) {
   font-size: 1.5rem;
   transition: all ease-in-out 0.2s;
 }
-.header__links .nav-dd_course:hover::after, .header__links .nav-dd_duration:hover::after {
+.header__links .nav-dd_course a:hover::after, .header__links .nav-dd_duration a:hover::after {
   color: #23049d;
 }
-.header__links .nav-dd_course:active::after, .header__links .nav-dd_duration:active::after {
+.header__links .nav-dd_course a:active::after, .header__links .nav-dd_duration a:active::after {
   color: #aa2ee6;
   right: 0.7rem;
 }
@@ -1069,8 +1129,114 @@ tbody tr:nth-child(even) {
   width: 100%;
   text-align: center;
 }
+.header .header-controls {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-around;
+  justify-items: center;
+  align-items: center;
+  width: 6rem;
+}
+.header .header-controls span {
+  display: block;
+}
+.header .header-controls__notifications a {
+  display: block;
+  margin: auto;
+}
+.header .header-controls__user-profile {
+  position: relative;
+}
+.header .header-controls__user-profile_dropdown {
+  display: none;
+  position: absolute;
+  top: 3.1rem;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  right: 0;
+  background-color: #fff;
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+  outline: 0;
+  padding: 0.5rem 0;
+  border-radius: 0.2rem;
+}
+.header .header-controls__user-profile_dropdown a {
+  display: block;
+  padding: 0.5rem 1rem;
+  padding-right: 3rem;
+  color: #222;
+}
+.header .header-controls__user-profile_dropdown a:hover {
+  background-color: #d7e3f5;
+  color: #23049d;
+}
+.header .header-controls__user-profile_dropdown:hover {
+  display: block;
+}
+.header .header-controls__home, .header .header-controls__menu {
+  display: none;
+  height: 1.5rem;
+}
+.header .header-controls__home img, .header .header-controls__menu img {
+  height: 100%;
+  width: auto;
+  filter: invert(1);
+}
 
 @media (max-width: 59.9375em) {
+  body {
+    padding-bottom: 5rem;
+  }
+
+  .header {
+    flex-wrap: wrap-reverse;
+  }
+  .header .header-controls {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 99;
+    width: 100%;
+    background: #0037B4;
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+    padding: 0.55rem;
+  }
+  .header .header-controls__notifications .notification_bell {
+    height: 1.5rem;
+  }
+  .header .header-controls__notifications .notification_bell img {
+    filter: invert(1);
+  }
+  .header .header-controls__notifications .notification_badge {
+    font-size: 0.5rem;
+    width: 0.9rem;
+    background-color: #d7e3f5;
+    color: #23049d;
+  }
+  .header .header-controls__user-profile {
+    position: static;
+  }
+  .header .header-controls__user-profile .avatar {
+    border: none;
+    padding: 0;
+    height: 1.7rem;
+  }
+  .header .header-controls__user-profile .avatar img {
+    background-color: #fff;
+    padding: 0.1rem;
+  }
+  .header .header-controls__user-profile_dropdown {
+    bottom: 3rem;
+    top: auto;
+    width: calc(100% - 1rem);
+    right: 0;
+    left: 50%;
+    transform: translate(-50%);
+  }
+  .header .header-controls__home, .header .header-controls__menu {
+    display: block;
+  }
   .header .overlaydiv .signup-form {
     width: 100%;
   }
