--- a/WebContent/app/css/_variables.scss
+++ b/WebContent/app/css/_variables.scss
@@ -3,13 +3,20 @@ $darkBlue: #23049d;
 $lighterBlue: #233e8b;
 $lightBlue: #d7e3f5;
 $lightPurple: #aa2ee6;
+$rightBlue: #0037B4;
 $kindaPink: #ff79cd;
 $yellowish: #ffdf6b;
+$cream: #fffdd0;
+$greenish: #3cb371;
+$redButton: linear-gradient(90deg,red 0%,rgb(247, 99, 99) 50%,red 100%);
+$lightRed:rgb(247, 99, 99);
 $white: #fff;
 $dark: #222;
 $lightDark: #333;
 $black: #000;
 $toast-color: #4974b4;
+$smoky: #eee;
+$grey: rgb(128, 128, 128);
 
 //Font sizes
 $font-sm: 0.875rem; //14px
