--- a/WebContent/app/css/_globals.scss
+++ b/WebContent/app/css/_globals.scss
@@ -2,47 +2,72 @@ html {
   font-size: 100%;
   box-sizing: border-box;
 }
+
 *,
 *::before,
 *::after {
   box-sizing: border-box;
 }
+
+input,
+textarea,
+button,
+select,
+a {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
 a,
 a:visited,
 a:hover {
   text-decoration: none;
 }
+
 body {
   margin: 0;
   padding: 0;
   font-family: "Nunito", sans-serif;
+  // font-family: 'PT Sans', sans-serif;
+  // font-family: 'Quicksand', sans-serif;
+  // font-family: 'Oxygen', sans-serif;
   font-size: 1rem;
   color: $dark;
   position: relative;
+  top: 0;
+  left: 0;
+  scrollbar-color: auto;
+  scrollbar-width: thin;
 }
+
 .container {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
+
 @include breakpoint-down(medium) {
   .container {
     padding-left: 1rem;
     padding-right: 1rem;
   }
 }
+
 //Flexbox
 .flex {
   display: flex;
+
   &-jc-sb {
     justify-content: space-between;
   }
+
   &-jc-c {
     justify-content: center;
   }
+
   &-ai-c {
     align-items: center;
   }
 }
+
 //Button
 button,
 .button {
@@ -51,14 +76,12 @@ button,
   border-radius: 50px;
   cursor: pointer;
   background-size: 200% auto;
-  background-image: linear-gradient(
-    to right,
-    $darkBlue 0%,
-    $lightPurple 50%,
-    $darkBlue 100%
-  );
+  background-image: linear-gradient(to right,
+      $darkBlue 0%,
+      $lightPurple 50%,
+      $darkBlue 100%);
   border: none;
-  color: white;
+  color: $white;
   font-weight: 700;
   transition: all 0.3s ease-in-out;
   box-shadow: $shadow2;
@@ -67,28 +90,33 @@ button,
     background-position: right center;
     box-shadow: $shadow3;
   }
+
   &:active {
     transform: scale(0.95);
     background-position: left center;
   }
 }
+
 .flat-wide-button {
   font-size: 1.3rem;
   margin-top: 1.2rem;
   width: 100%;
   border-radius: 5px;
   font-family: inherit;
+
   &:hover,
   &:focus {
     transform: scale(1.025);
     background-position: right center;
     box-shadow: $shadow3;
   }
+
   &:active {
     transform: scale(0.95);
     background-position: left center;
   }
 }
+
 .small-round-button {
   font-size: 0.9rem;
   font-weight: normal;
@@ -98,47 +126,44 @@ button,
   max-width: 5rem;
   flex: 1;
 }
+
 .delete-button {
-  background-image: linear-gradient(
-    90deg,
-    red 0%,
-    rgb(247, 99, 99) 50%,
-    red 100%
-  );
+  background-image: $redButton;
 }
+
 .edit-button {
-  background-image: linear-gradient(
-    to right,
-    $darkBlue 0%,
-    $lighterBlue 50%,
-    $darkBlue 100%
-  );
+  background-image: linear-gradient(to right,
+      $darkBlue 0%,
+      $lighterBlue 50%,
+      $darkBlue 100%);
 }
+
 .float-right-btn {
   position: absolute;
   top: 0.8rem;
   right: 1.2rem;
   box-shadow: none;
-  background-image: linear-gradient(
-    90deg,
-    $lightPurple 0%,
-    $kindaPink 50%,
-    $lightPurple 100%
-  );
+  background-image: linear-gradient(90deg,
+      $lightPurple 0%,
+      $kindaPink 50%,
+      $lightPurple 100%);
   font-size: 1rem;
   font-weight: normal;
   padding: 0.5rem 1rem;
   width: max-content;
   border-radius: 0.2rem;
+
   &:hover {
     transform: scale(1);
     background-position: right center;
     box-shadow: none;
   }
+
   &:active {
     transform: scale(0.95);
     background-position: left center;
   }
+
   @include breakpoint-down(medium) {
     right: auto;
     left: 1.2rem;
@@ -156,12 +181,13 @@ select {
   border-radius: 5px;
   transition: all ease-in-out 0.15s;
   outline: 1px solid $lightBlue;
+
   &:focus {
     outline: 1.5px solid $lightBlue;
-    transform: scale(1.005);
     box-shadow: $shadow3;
   }
 }
+
 .input-with-icon {
   font-size: 1rem;
   padding: 1rem;
@@ -170,49 +196,101 @@ select {
   background-repeat: no-repeat;
   background-size: 1.2rem;
   background-position: 1rem 1rem;
-  &:not(:first-child) {
-    margin-top: 1.2rem;
+}
+
+.form-unit {
+  &:not(:last-child) {
+    margin-bottom: 1rem;
+  }
+
+  label {
+    display: block;
+    width: 100%;
+    font-size: 1rem;
+    padding-bottom: 0.25rem;
   }
 }
+
+.form-unit-full {
+  width: 100%;
+}
+
+.form-unit-half {
+  width: 48%;
+
+  @include breakpoint-down(medium) {
+    width: 100%;
+  }
+}
+
+.form-unit-half-container {
+  display: flex;
+  justify-content: space-between;
+  flex-flow: row wrap;
+
+  @include breakpoint-down(medium) {
+    margin-bottom: 1rem;
+  }
+}
+
 .user_name {
   background-image: url(../../images/id-card.png);
 }
+
 .user_fname {
   margin-right: 0.5rem;
 }
+
 .user_id {
   background-image: url(../../images/avatar.png);
 }
+
 .user_pass {
   background-image: url(../../images/padlock.png);
 }
+
 .user_email {
   background-image: url(../../images/email.png);
 }
+
 .user_tel {
   background-image: url(../../images/telephone.png);
 }
 .user_gender {
   background-image: url(../../images/stick-man.png);
 }
+.bank{
+  background-image: url(../../images/bank.png);
+}
+.acc_no{
+  background-image: url(../../images/account_number.png);
+}
+.acc_holder{
+  background-image: url(../../images/account_holder.png);
+}
 //Visibility
 .hide-for-mobile {
+
   // hide for tablet and mobile
   @include breakpoint-down(medium) {
     display: none;
   }
 }
+
 .hide-for-desktop {
+
   // hide for desktop viewport widths
   @include breakpoint-up(large) {
     display: none;
   }
 }
+
 .wide-for-mobile {
   @include breakpoint-down(medium) {
     min-width: 100%;
   }
 }
+
 .thin-H1 {
   font-weight: normal;
   font-size: 2rem;
@@ -220,12 +298,14 @@ select {
   text-align: center;
   width: 100%;
 }
+
 table {
   border-collapse: collapse;
   box-shadow: $shadow1;
   border-radius: 1rem;
   width: 100%;
 }
+
 caption,
 .caption {
   width: 100%;
@@ -233,24 +313,30 @@ caption,
   padding-bottom: 1rem;
   font-size: 1.2rem;
 }
+
 thead {
   background: linear-gradient(150deg, $darkBlue, $lighterBlue);
   border-radius: 1rem;
 }
+
 th {
   color: $white;
 }
+
 th,
 td {
   text-align: center;
   padding: 0.5rem;
 }
+
 td {
   text-align: center;
 }
+
 tbody tr:nth-child(even) {
   background: $lightBlue;
 }
+
 #snackbar {
   visibility: hidden;
   min-width: 250px;
@@ -268,10 +354,12 @@ tbody tr:nth-child(even) {
   max-height: 70vh;
   overflow-y: hidden;
 }
+
 #snackbar.show {
   visibility: visible;
   animation: toast-in 0.4s, toast-out 0.5s 2.5s;
 }
+
 #snackbar.show-loading {
   visibility: visible;
   min-width: max-content;
@@ -281,6 +369,7 @@ tbody tr:nth-child(even) {
   box-shadow: none;
   overflow-x: hidden;
 }
+
 .overlaydiv {
   position: fixed;
   visibility: hidden;
@@ -296,12 +385,13 @@ tbody tr:nth-child(even) {
   padding: 1.2rem;
   padding-top: 0;
   overflow: hidden;
-  transition: all 0.3s ease-in-out;
+
   @include breakpoint-down(medium) {
     width: calc(100% - 2.4rem);
     height: 80vh;
     padding: 0 0.7rem 0.7rem 0.7rem;
   }
+
   .cross {
     cursor: pointer;
     width: max-content;
@@ -309,31 +399,39 @@ tbody tr:nth-child(even) {
     position: absolute;
     right: 1.2rem;
     top: 1.5rem;
+
     &:active {
       transform: scale(0.92);
     }
-    > span {
+
+    >span {
       width: 30px;
       height: 0.25rem;
       transform-origin: 4px;
     }
-    > span:first-child {
+
+    >span:first-child {
       transform: rotate(45deg);
+
       &:hover {
         box-shadow: $shadow3;
       }
     }
-    > span:nth-child(2) {
+
+    >span:nth-child(2) {
       opacity: 0;
     }
-    > span:last-child {
+
+    >span:last-child {
       transform: rotate(-45deg);
+
       &:hover {
         box-shadow: $shadow3;
       }
     }
   }
 }
+
 .loading {
   display: block;
   width: 2.5rem;
@@ -353,21 +451,27 @@ tbody tr:nth-child(even) {
   animation: loader 1s infinite;
   -webkit-animation: loader 1s infinite;
 }
+
 .checkmark {
   display: inline-block;
   width: 2rem;
   height: 2rem;
-  -ms-transform: rotate(45deg); /* IE 9 */
-  -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
+  -ms-transform: rotate(45deg);
+  /* IE 9 */
+  -webkit-transform: rotate(45deg);
+  /* Chrome, Safari, Opera */
   transform: rotate(45deg);
   cursor: pointer;
+
   &_selected {
     cursor: auto;
+
     &::before {
       background-color: transparent;
       background: linear-gradient(45deg, $darkBlue, $lightPurple);
       animation: tick-selected-stem ease-in 0.2s forwards;
     }
+
     &::after {
       background-color: transparent;
       background: linear-gradient(-45deg, $darkBlue, $lightPurple);
@@ -375,6 +479,7 @@ tbody tr:nth-child(even) {
     }
   }
 }
+
 .checkmark:before {
   content: "";
   position: absolute;
@@ -384,6 +489,7 @@ tbody tr:nth-child(even) {
   left: 11px;
   bottom: 2px;
 }
+
 .checkmark:after {
   content: "";
   position: absolute;
@@ -393,6 +499,7 @@ tbody tr:nth-child(even) {
   left: 0.1rem;
   top: 1.53rem;
 }
+
 .dropdown-arrow {
   display: inline-block;
   transform: rotate(90deg);
@@ -401,36 +508,160 @@ tbody tr:nth-child(even) {
   font-size: 1.5rem;
   margin: 0.2rem;
 }
+
 .scrollable {
   width: 100%;
   max-height: 65vh;
   overflow-y: auto;
   scrollbar-color: auto;
   scrollbar-width: thin;
+
   @include breakpoint-down(medium) {
     max-height: 65vh;
     overflow-y: visible;
     overflow-x: scroll;
   }
+
   &::-webkit-scrollbar {
     width: 0.5rem;
     height: 0.5rem;
   }
+
   &::-webkit-scrollbar-track {
     background: $lightBlue;
   }
+
   &::-webkit-scrollbar-thumb {
     background: $lightPurple;
     border-radius: 0.4rem;
   }
 }
+
+.nav-dd {
+  position: absolute;
+  top: 3.1rem;
+  left: 0;
+  max-height: 85vh;
+  display: none;
+
+  ul,
+  li {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  .dropdown-caption {
+    background-color: $smoky;
+    color: $grey;
+  }
+
+  &_courses,
+  &_durations,
+  &_subjects {
+    display: none;
+    position: absolute;
+    top: 0;
+    background-color: $white;
+    box-shadow: $shadow2;
+    width: 11rem;
+    border-radius: 0.25rem;
+
+    a {
+      color: $dark;
+      display: inline-block;
+      padding: 0.5rem 1rem;
+      width: 100%;
+      cursor: pointer;
+    }
+  }
+
+  &_duration,
+  &_subject {
+    display: none;
+  }
+
+  &_course,
+  &_duration,
+  &_subject {
+    position: static;
+
+    &:hover {
+      background-color: $lightBlue;
+      border-radius: 0.25rem;
+    }
+  }
+
+  &_courses {
+    overflow-y: auto;
+  }
+
+  &_durations {
+    top: 0;
+    left: 11rem;
+  }
+
+  &_subjects {
+    top: 0;
+    left: 22rem;
+    width: max-content;
+    max-height: 85vh;
+    max-width: 20rem;
+    overflow-y: auto;
+  }
+
+  &_subject {
+    a {
+      color: $dark;
+      width: 100%;
+
+      &:hover {
+        color: $darkBlue;
+      }
+    }
+  }
+
+  &_course,
+  &_duration {
+    a {
+      position: relative;
+
+      &::after {
+        position: absolute;
+        top: 0.3rem;
+        right: 1rem;
+        content: ">";
+        font-weight: bold;
+        font-family: monospace;
+        font-size: 1.5rem;
+        transition: all ease-in-out 0.2s;
+      }
+
+      &:hover {
+        &::after {
+          color: $darkBlue;
+        }
+      }
+
+      &:active {
+        &::after {
+          color: $lightPurple;
+          right: 0.7rem;
+        }
+      }
+    }
+  }
+}
+
 .notification_bell {
   position: relative;
-  height: 1.8rem;
+  height: 2rem;
+
   img {
     height: 100%;
     width: auto;
   }
+
   .notification_badge {
     position: absolute;
     display: flex;
@@ -447,14 +678,15 @@ tbody tr:nth-child(even) {
     font-weight: bold;
   }
 }
+
 .avatar {
   height: 2.5rem;
   border-radius: 50%;
   cursor: pointer;
-  padding: 0.12rem;
+  padding: 0.1rem;
   display: flex;
   justify-content: center;
-  border: 2px solid $dark;
+  box-shadow: $shadow2;
   img {
     display: block;
     width: auto;
@@ -462,43 +694,172 @@ tbody tr:nth-child(even) {
     border-radius: 50%;
   }
 }
-.overlay-background{
+
+.overlay-background {
   display: none;
   background-color: rgba($color: #000000, $alpha: 0.7);
   position: fixed;
   top: 0;
   height: 100vh;
+  padding: 5rem 2rem;
   width: 100vw;
   z-index: 20;
+  color: $white;
+  font-size: 0.75rem;
+  overflow: auto;
+  animation: fade-in ease-in-out 0.2s;
   @include breakpoint-down(medium) {
     display: block;
+  }
+}
+
+.tab-selector {
+  width: calc(100% - 2rem);
+  margin-right: 2rem;
+  border-top-left-radius: inherit;
+  border-top-right-radius: inherit;
+  margin: 0 auto;
+  height: 3rem;
+  background-color: $white;
+  display: flex;
+  overflow-x: auto;
+  scrollbar-color: auto;
+  scrollbar-width: thin;
+  &::-webkit-scrollbar {
+    width: 0rem;
+    height: 0.25rem;
+  }
+  &::-webkit-scrollbar-track {
+    background: $smoky;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: $lightBlue;
+    border-radius: 0.4rem;
+  }
+  &_tab {
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+    text-align: center;
+    padding: 1rem 0.5rem;
+    border-bottom: 2px solid $lightBlue;
+    min-width: max-content;
+
+    &:hover {
+      color: $darkBlue;
+    }
+  }
+
+  &_selected {
+    background-color: $white;
+    color: $darkBlue;
+    font-weight: bold;
+    position: relative;
+
+    &::before {
+      content: "";
+      display: block;
+      position: absolute;
+      height: 2px;
+      background: linear-gradient(90deg, $darkBlue, $lightPurple);
+      width: 100%;
+      bottom: -2px;
+      border-radius: 2px;
+      animation: highlight ease-in-out 0.25s forwards;
+    }
+  }
+
+  &_exclamation,
+  &_error {
+    &::after {
+      font-weight: bolder;
+      margin-left: 0.5rem;
+      border-radius: 50%;
+      height: 1.5rem;
+      width: 1.5rem;
+      padding: 0 0.2rem 0.2rem 0.2rem;
+      color: $dark;
+    }
+  }
+
+  &_exclamation {
+    &::after {
+      content: "!";
+      background-color: $yellowish;
+      font-size: 1.2rem;
+    }
+  }
+
+  &_error {
+    &::after {
+      content: "X";
+      background: $lightRed;
+      font-size: 1.1rem;
+    }
+  }
+}
+
+.form-info{
+  display: block;
+  width: max-content;
+  max-width: 100%;
+  border-radius: 2rem;
+  font-size: 0.8rem;
+  background-color: $lightBlue;
+  padding: 0.5rem 1rem;
+  text-align: center;
+  margin: 0 auto;
+  &_red{
+    background-color: $lightRed;
+    color: $white;
+  }
+  &_yellow{
+    background-color: $cream;
+    margin-bottom: 1rem;
+  }
+  &_green{
+    background-color: $greenish;
+    color: $white;
+    margin-bottom: 1rem;
+    overflow: hidden;
+    animation: short-life ease-in 4s forwards;
   }
 }
 .reveal {
   animation: reveal ease-in-out 0.3s forwards;
 }
+
 .conceal {
   animation: conceal ease-in-out 0.3s forwards;
 }
+
 .rotateBy90 {
   animation: rotateBy90 ease-in-out 0.3s forwards;
 }
+
 .rotateByNeg90 {
   animation: rotateByNeg90 ease-in-out 0.3s forwards;
 }
+
 .fade-in {
   visibility: hidden;
   animation: fade-in ease-in-out 0.3s forwards;
   visibility: visible;
 }
+
 .fade-in {
   visibility: visible;
   animation: fade-in ease-in-out 0.3s forwards;
   visibility: hidden;
 }
+
 .slide-in {
   animation: slide-in ease-in-out 0.3s forwards;
 }
+
 .slide-out {
   animation: slide-out ease-in-out 0.3s forwards;
 }
