--- a/WebContent/app/css/_hero.scss
+++ b/WebContent/app/css/_hero.scss
@@ -23,6 +23,9 @@
   &__cta_search {
     background-image: url("../../images/search.png");
     margin-top: 1.2rem;
+    padding: 1rem;
+    padding-left: 3rem;
+    background-position: 1rem 1rem;
   }
   &__sugesstion {
     a {
