Add Tutor Application Form with Basic Info, Address and Languages sections.

--- a/WebContent/app/css/_variables.scss
+++ b/WebContent/app/css/_variables.scss
@@ -7,7 +7,7 @@ $rightBlue: #0037B4;
 $kindaPink: #ff79cd;
 $yellowish: #ffdf6b;
 $cream: #fffdd0;
-$greenish: #3cb371;
+$greenish: #5ce49a;
 $redButton: linear-gradient(90deg,red 0%,rgb(247, 99, 99) 50%,red 100%);
 $lightRed:rgb(247, 99, 99);
 $white: #fff;
