--- a/WebContent/app/css/_globals.scss
+++ b/WebContent/app/css/_globals.scss
@@ -37,6 +37,7 @@ body {
   left: 0;
   scrollbar-color: auto;
   scrollbar-width: thin;
+  scroll-behavior: smooth;
 }
 
 .container {
@@ -85,8 +86,8 @@ button,
   font-weight: 700;
   transition: all 0.3s ease-in-out;
   box-shadow: $shadow2;
+
   &:hover {
-    transform: scale(1.025);
     background-position: right center;
     box-shadow: $shadow3;
   }
@@ -106,7 +107,6 @@ button,
 
   &:hover,
   &:focus {
-    transform: scale(1.025);
     background-position: right center;
     box-shadow: $shadow3;
   }
@@ -115,8 +115,59 @@ button,
     transform: scale(0.95);
     background-position: left center;
   }
+  &:disabled{
+    background-image: none;
+    background-color: $lightBlue;
+    color: $white;
+    cursor: not-allowed;
+    box-shadow: none;
+  }
+  &_narrow {
+    width: 50%;
+    background-image: linear-gradient(to right,
+        $darkBlue 0%,
+        $lighterBlue 50%,
+        $lightPurple 100%);
+    margin-left: auto;
+    margin-right: auto;
+    @include breakpoint-down(medium) {
+      font-size: 1rem;
+    }
+  }
 }
-
+.flat-hallow-button{
+  background: $white;
+  color: $darkBlue;
+  border: 2px solid $darkBlue;
+  box-shadow: none;
+  width: max-content;
+  transition: all 0.1s ease-in-out;
+  &:hover{
+    box-shadow: none;
+    border-color: $lightPurple;
+    color: $lightPurple;
+  }
+  &:focus{
+    box-shadow: none;
+  }
+  &:active{
+    border-color: $darkBlue;
+    background: $darkBlue;
+    color: $white;
+    transform: none;
+  }
+  &:disabled{
+    background-color: $white;
+    border-color: $lightBlue;
+    color: $lightBlue;
+    cursor: not-allowed;
+  }
+  @include breakpoint-down(medium) {
+    font-size: 1rem;
+    width: 22%;
+    padding: 0;
+  }
+}
 .small-round-button {
   font-size: 0.9rem;
   font-weight: normal;
@@ -170,6 +221,17 @@ button,
   }
 }
 
+.round-single-button {
+  border-radius: 50%;
+  font-size: 2.5rem;
+  height: 3rem;
+  width: 3rem;
+  padding: 0;
+  margin: 1rem auto;
+  font-family: 'Courier New', Courier, monospace;
+  background-image: linear-gradient(to right, $kindaPink 0%, $lightPurple 50%, $kindaPink 100%);
+}
+
 //Inputs
 input,
 select {
@@ -181,6 +243,7 @@ select {
   border-radius: 5px;
   transition: all ease-in-out 0.15s;
   outline: 1px solid $lightBlue;
+  font-family: inherit;
 
   &:focus {
     outline: 1.5px solid $lightBlue;
@@ -196,6 +259,42 @@ select {
   background-repeat: no-repeat;
   background-size: 1.2rem;
   background-position: 1rem 1rem;
+}
+
+input[type=file] {
+  position: relative;
+}
+
+input[type=file]::-webkit-file-upload-button,
+input[type=file]::file-selector-button {
+  border: none;
+  outline: none;
+  cursor: pointer;
+  right: 0.3rem;
+  top: 0.5rem;
+  width: max-content;
+  background: linear-gradient(45deg, $kindaPink, $lightPurple);
+  color: $white;
+  font-size: 1rem;
+  padding: 0.5rem 1.5rem;
+  border-radius: 0.25rem;
+  position: absolute;
+}
+
+textarea {
+  width: 100%;
+  height: 10rem;
+  border: none;
+  font-family: inherit;
+  font-size: 1rem;
+  box-shadow: $shadow2;
+  outline: 1px solid $lightBlue;
+  border-radius: 5px;
+
+  &:focus {
+    outline: 1.5px solid $lightBlue;
+    box-shadow: $shadow3;
+  }
 }
 
 .form-unit {
@@ -227,9 +326,36 @@ select {
   display: flex;
   justify-content: space-between;
   flex-flow: row wrap;
+  width: 100%;
 
   @include breakpoint-down(medium) {
     margin-bottom: 1rem;
+  }
+
+  &_halfed {
+    width: 48%;
+
+    .form-unit-half {
+      width: 100%;
+
+      @include breakpoint-down(medium) {
+        width: 100%;
+      }
+    }
+
+    flex-direction: column;
+
+    @include breakpoint-down(medium) {
+      width: 100%;
+    }
+  }
+}
+
+.main__table_half {
+  width: 48%;
+
+  @include breakpoint-down(medium) {
+    width: 100%;
   }
 }
 
@@ -256,18 +382,47 @@ select {
 .user_tel {
   background-image: url(../../images/telephone.png);
 }
+
 .user_gender {
   background-image: url(../../images/stick-man.png);
 }
-.bank{
+
+.user_photo {
+  background-image: url(../../images/photo.png);
+}
+
+.user_bio {
+  background-image: url(../../images/bio.png);
+}
+
+.user_house {
+  background-image: url(../../images/house.png);
+}
+
+.user_location {
+  background-image: url(../../images/location.png);
+}
+
+.language {
+  background-image: url(../../images/language.png);
+}
+
+.proficiency {
+  background-image: url(../../images/badge.png);
+}
+
+.bank {
   background-image: url(../../images/bank.png);
 }
-.acc_no{
+
+.acc_no {
   background-image: url(../../images/account_number.png);
 }
-.acc_holder{
+
+.acc_holder {
   background-image: url(../../images/account_holder.png);
 }
+
 //Visibility
 .hide-for-mobile {
 
@@ -296,13 +451,14 @@ select {
   font-size: 2rem;
   line-height: 1.5;
   text-align: center;
-  width: 100%;
+  width: max-content;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 table {
   border-collapse: collapse;
   box-shadow: $shadow1;
-  border-radius: 1rem;
   width: 100%;
 }
 
@@ -316,7 +472,6 @@ caption,
 
 thead {
   background: linear-gradient(150deg, $darkBlue, $lighterBlue);
-  border-radius: 1rem;
 }
 
 th {
@@ -335,6 +490,37 @@ td {
 
 tbody tr:nth-child(even) {
   background: $lightBlue;
+}
+
+.white-table {
+  box-shadow: none;
+  width: max-content;
+  max-width: 100%;
+
+  @include breakpoint-down(medium) {
+    max-width: none;
+  }
+
+  thead {
+    background: $white;
+    border: solid $lightBlue;
+    border-width: 1.5px 0 1.5px 0;
+
+    th {
+      color: $dark;
+      text-align: left;
+
+      @include breakpoint-down(medium) {
+        width: max-content;
+      }
+    }
+  }
+
+  td {
+    border: solid $lightBlue;
+    border-width: 0 0 1.5px 0;
+    text-align: left;
+  }
 }
 
 #snackbar {
@@ -456,10 +642,6 @@ tbody tr:nth-child(even) {
   display: inline-block;
   width: 2rem;
   height: 2rem;
-  -ms-transform: rotate(45deg);
-  /* IE 9 */
-  -webkit-transform: rotate(45deg);
-  /* Chrome, Safari, Opera */
   transform: rotate(45deg);
   cursor: pointer;
 
@@ -515,7 +697,7 @@ tbody tr:nth-child(even) {
   overflow-y: auto;
   scrollbar-color: auto;
   scrollbar-width: thin;
-
+  scroll-behavior: smooth;
   @include breakpoint-down(medium) {
     max-height: 65vh;
     overflow-y: visible;
@@ -672,7 +854,7 @@ tbody tr:nth-child(even) {
     padding: 0.1rem;
     top: 0;
     background-color: $lightPurple;
-    color: white;
+    color: $white;
     border-radius: 50%;
     font-size: 0.6rem;
     font-weight: bold;
@@ -687,6 +869,7 @@ tbody tr:nth-child(even) {
   display: flex;
   justify-content: center;
   box-shadow: $shadow2;
+
   img {
     display: block;
     width: auto;
@@ -708,6 +891,7 @@ tbody tr:nth-child(even) {
   font-size: 0.75rem;
   overflow: auto;
   animation: fade-in ease-in-out 0.2s;
+
   @include breakpoint-down(medium) {
     display: block;
   }
@@ -725,10 +909,13 @@ tbody tr:nth-child(even) {
   overflow-x: auto;
   scrollbar-color: auto;
   scrollbar-width: thin;
+  z-index: inherit;
+
   &::-webkit-scrollbar {
     width: 0rem;
     height: 0.25rem;
   }
+
   &::-webkit-scrollbar-track {
     background: $smoky;
   }
@@ -737,6 +924,7 @@ tbody tr:nth-child(even) {
     background: $lightBlue;
     border-radius: 0.4rem;
   }
+
   &_tab {
     cursor: pointer;
     display: flex;
@@ -747,7 +935,7 @@ tbody tr:nth-child(even) {
     padding: 1rem 0.5rem;
     border-bottom: 2px solid $lightBlue;
     min-width: max-content;
-
+    position: relative;
     &:hover {
       color: $darkBlue;
     }
@@ -773,7 +961,8 @@ tbody tr:nth-child(even) {
   }
 
   &_exclamation,
-  &_error {
+  &_error,
+  &_completed {
     &::after {
       font-weight: bolder;
       margin-left: 0.5rem;
@@ -800,9 +989,18 @@ tbody tr:nth-child(even) {
       font-size: 1.1rem;
     }
   }
+  &_completed{
+    &::after{
+      content: "✓";
+      background: $greenish;
+      font-size: 1rem;
+      transform: rotate(10deg);
+      color: $white;
+    }
+  }
 }
 
-.form-info{
+.form-info {
   display: block;
   width: max-content;
   max-width: 100%;
@@ -812,15 +1010,18 @@ tbody tr:nth-child(even) {
   padding: 0.5rem 1rem;
   text-align: center;
   margin: 0 auto;
-  &_red{
+
+  &_red {
     background-color: $lightRed;
     color: $white;
   }
-  &_yellow{
+
+  &_yellow {
     background-color: $cream;
     margin-bottom: 1rem;
   }
-  &_green{
+
+  &_green {
     background-color: $greenish;
     color: $white;
     margin-bottom: 1rem;
@@ -828,6 +1029,121 @@ tbody tr:nth-child(even) {
     animation: short-life ease-in 4s forwards;
   }
 }
+
+.underlined {
+  position: relative;
+
+  &::before {
+    content: "";
+    display: block;
+    position: absolute;
+    height: 3px;
+    background: linear-gradient(90deg, $darkBlue, $lightPurple);
+    left: 0;
+    right: 0;
+    bottom: -2px;
+    border-radius: 2.5px;
+    width: 100%;
+  }
+}
+
+.check-container {
+  display: inline-block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  background-color: $white;
+  cursor: pointer;
+  font-size: 1.2rem;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  width: 25%;
+  transition: all 0.3s ease-in-out;
+
+  @include breakpoint-down(medium) {
+    width: 50%;
+  }
+
+  @include breakpoint-down(small) {
+    width: 100%;
+  }
+
+  &:hover {
+    input {
+      ~ {
+        .check {
+          border: 1.5px solid $lightPurple;
+        }
+      }
+    }
+  }
+
+  input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+
+    &:checked {
+      ~ {
+        .check {
+          background-color: $lightPurple;
+          border: 1.5px solid $lightPurple;
+
+          &:after {
+            display: block;
+          }
+        }
+      }
+    }
+  }
+
+  .check {
+    &:after {
+      left: 7.5px;
+      top: 1px;
+      width: 0.5rem;
+      height: 1rem;
+      border: solid $white;
+      border-width: 0 3px 3px 0;
+      -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+      transform: rotate(45deg);
+    }
+  }
+}
+
+.check {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: $lightBlue;
+  box-shadow: $shadow5;
+  border-radius: 0.2rem;
+
+  &:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+}
+
+.checkboxs-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+}
+
+.table-container {
+  width: 100%;
+  overflow-x: auto;
+}
+
 .reveal {
   animation: reveal ease-in-out 0.3s forwards;
 }
