--- a/WebContent/app/css/_main.scss
+++ b/WebContent/app/css/_main.scss
@@ -6,7 +6,7 @@
     flex: 1;
     min-height: 88vh;
     margin: 1.5rem 3rem;
-
+    
     @include breakpoint-down(medium) {
         width: 100%;
         flex: unset;
@@ -43,6 +43,7 @@
     }
 
     &__sub-heading {
+        width: 100%;
         font-size: 1.25rem;
         text-align: center;
     }
@@ -96,19 +97,48 @@
         display: flex;
         flex-flow: column wrap;
         justify-content: center;
+        border-radius: 0.25rem;
         @include breakpoint-down(medium) {
             width: 100%;
             padding: 1rem;
         }
+        &_shadowed{
+            background-color: $white;
+            box-shadow: $shadow2;
+            margin: 0 auto;
+            .tab-selector{
+                width: 100%;
+            }
+        }
     }
 
     &__form {
+        max-width: 100%;
         padding: 3rem;
         padding-top: 0.5rem;
-
         @include breakpoint-down(medium) {
             padding: 0;
+            width: 100%;
         }
-
+        &_footer{
+            max-width: 100%;
+            display: flex;
+            justify-content: space-between;
+        }
+    }
+    &__form-section{
+        padding-top: 1rem;
+        position: relative;
+        width: 100%;
+    }
+}
+.grey-container{
+    height: 100%;
+    min-height: 95vh;
+    background-color: #eeeff2;
+    margin-top: -0.5rem;
+    padding: 1.5rem;
+    @include breakpoint-down(medium) {
+        padding: 0;
     }
 }
