--- a/WebContent/app/css/style.css
+++ b/WebContent/app/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @-webkit-keyframes fade-in {
   from {
     opacity: 0;
@@ -342,6 +343,7 @@ body {
   left: 0;
   scrollbar-color: auto;
   scrollbar-width: thin;
+  scroll-behavior: smooth;
 }
 
 .container {
@@ -384,7 +386,6 @@ button,
 }
 button:hover,
 .button:hover {
-  transform: scale(1.025);
   background-position: right center;
   box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 }
@@ -402,13 +403,68 @@ button:active,
   font-family: inherit;
 }
 .flat-wide-button:hover, .flat-wide-button:focus {
-  transform: scale(1.025);
   background-position: right center;
   box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 }
 .flat-wide-button:active {
   transform: scale(0.95);
   background-position: left center;
+}
+.flat-wide-button:disabled {
+  background-image: none;
+  background-color: #d7e3f5;
+  color: #fff;
+  cursor: not-allowed;
+  box-shadow: none;
+}
+.flat-wide-button_narrow {
+  width: 50%;
+  background-image: linear-gradient(to right, #23049d 0%, #233e8b 50%, #aa2ee6 100%);
+  margin-left: auto;
+  margin-right: auto;
+}
+@media (max-width: 59.9375em) {
+  .flat-wide-button_narrow {
+    font-size: 1rem;
+  }
+}
+
+.flat-hallow-button {
+  background: #fff;
+  color: #23049d;
+  border: 2px solid #23049d;
+  box-shadow: none;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  transition: all 0.1s ease-in-out;
+}
+.flat-hallow-button:hover {
+  box-shadow: none;
+  border-color: #aa2ee6;
+  color: #aa2ee6;
+}
+.flat-hallow-button:focus {
+  box-shadow: none;
+}
+.flat-hallow-button:active {
+  border-color: #23049d;
+  background: #23049d;
+  color: #fff;
+  transform: none;
+}
+.flat-hallow-button:disabled {
+  background-color: #fff;
+  border-color: #d7e3f5;
+  color: #d7e3f5;
+  cursor: not-allowed;
+}
+@media (max-width: 59.9375em) {
+  .flat-hallow-button {
+    font-size: 1rem;
+    width: 22%;
+    padding: 0;
+  }
 }
 
 .small-round-button {
@@ -461,6 +517,17 @@ button:active,
   }
 }
 
+.round-single-button {
+  border-radius: 50%;
+  font-size: 2.5rem;
+  height: 3rem;
+  width: 3rem;
+  padding: 0;
+  margin: 1rem auto;
+  font-family: "Courier New", Courier, monospace;
+  background-image: linear-gradient(to right, #ff79cd 0%, #aa2ee6 50%, #ff79cd 100%);
+}
+
 input,
 select {
   border: none;
@@ -471,6 +538,7 @@ select {
   border-radius: 5px;
   transition: all ease-in-out 0.15s;
   outline: 1px solid #d7e3f5;
+  font-family: inherit;
 }
 input:focus,
 select:focus {
@@ -486,6 +554,58 @@ select:focus {
   background-repeat: no-repeat;
   background-size: 1.2rem;
   background-position: 1rem 1rem;
+}
+
+input[type=file] {
+  position: relative;
+}
+
+input[type=file]::-webkit-file-upload-button {
+  border: none;
+  outline: none;
+  cursor: pointer;
+  right: 0.3rem;
+  top: 0.5rem;
+  width: -webkit-max-content;
+  width: max-content;
+  background: linear-gradient(45deg, #ff79cd, #aa2ee6);
+  color: #fff;
+  font-size: 1rem;
+  padding: 0.5rem 1.5rem;
+  border-radius: 0.25rem;
+  position: absolute;
+}
+
+input[type=file]::-webkit-file-upload-button,
+input[type=file]::file-selector-button {
+  border: none;
+  outline: none;
+  cursor: pointer;
+  right: 0.3rem;
+  top: 0.5rem;
+  width: -webkit-max-content;
+  width: max-content;
+  background: linear-gradient(45deg, #ff79cd, #aa2ee6);
+  color: #fff;
+  font-size: 1rem;
+  padding: 0.5rem 1.5rem;
+  border-radius: 0.25rem;
+  position: absolute;
+}
+
+textarea {
+  width: 100%;
+  height: 10rem;
+  border: none;
+  font-family: inherit;
+  font-size: 1rem;
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+  outline: 1px solid #d7e3f5;
+  border-radius: 5px;
+}
+textarea:focus {
+  outline: 1.5px solid #d7e3f5;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 }
 
 .form-unit:not(:last-child) {
@@ -515,10 +635,37 @@ select:focus {
   display: flex;
   justify-content: space-between;
   flex-flow: row wrap;
+  width: 100%;
 }
 @media (max-width: 59.9375em) {
   .form-unit-half-container {
     margin-bottom: 1rem;
+  }
+}
+.form-unit-half-container_halfed {
+  width: 48%;
+  flex-direction: column;
+}
+.form-unit-half-container_halfed .form-unit-half {
+  width: 100%;
+}
+@media (max-width: 59.9375em) {
+  .form-unit-half-container_halfed .form-unit-half {
+    width: 100%;
+  }
+}
+@media (max-width: 59.9375em) {
+  .form-unit-half-container_halfed {
+    width: 100%;
+  }
+}
+
+.main__table_half {
+  width: 48%;
+}
+@media (max-width: 59.9375em) {
+  .main__table_half {
+    width: 100%;
   }
 }
 
@@ -548,6 +695,30 @@ select:focus {
 
 .user_gender {
   background-image: url(../../images/stick-man.png);
+}
+
+.user_photo {
+  background-image: url(../../images/photo.png);
+}
+
+.user_bio {
+  background-image: url(../../images/bio.png);
+}
+
+.user_house {
+  background-image: url(../../images/house.png);
+}
+
+.user_location {
+  background-image: url(../../images/location.png);
+}
+
+.language {
+  background-image: url(../../images/language.png);
+}
+
+.proficiency {
+  background-image: url(../../images/badge.png);
 }
 
 .bank {
@@ -585,13 +756,16 @@ select:focus {
   font-size: 2rem;
   line-height: 1.5;
   text-align: center;
-  width: 100%;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 table {
   border-collapse: collapse;
   box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
-  border-radius: 1rem;
   width: 100%;
 }
 
@@ -605,7 +779,6 @@ caption,
 
 thead {
   background: linear-gradient(150deg, #23049d, #233e8b);
-  border-radius: 1rem;
 }
 
 th {
@@ -624,6 +797,40 @@ td {
 
 tbody tr:nth-child(even) {
   background: #d7e3f5;
+}
+
+.white-table {
+  box-shadow: none;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  max-width: 100%;
+}
+@media (max-width: 59.9375em) {
+  .white-table {
+    max-width: none;
+  }
+}
+.white-table thead {
+  background: #fff;
+  border: solid #d7e3f5;
+  border-width: 1.5px 0 1.5px 0;
+}
+.white-table thead th {
+  color: #222;
+  text-align: left;
+}
+@media (max-width: 59.9375em) {
+  .white-table thead th {
+    width: -webkit-max-content;
+    width: -moz-max-content;
+    width: max-content;
+  }
+}
+.white-table td {
+  border: solid #d7e3f5;
+  border-width: 0 0 1.5px 0;
+  text-align: left;
 }
 
 #snackbar {
@@ -740,8 +947,6 @@ tbody tr:nth-child(even) {
   display: inline-block;
   width: 2rem;
   height: 2rem;
-  /* IE 9 */
-  /* Chrome, Safari, Opera */
   transform: rotate(45deg);
   cursor: pointer;
 }
@@ -796,6 +1001,7 @@ tbody tr:nth-child(even) {
   overflow-y: auto;
   scrollbar-color: auto;
   scrollbar-width: thin;
+  scroll-behavior: smooth;
 }
 @media (max-width: 59.9375em) {
   .scrollable {
@@ -922,7 +1128,7 @@ tbody tr:nth-child(even) {
   padding: 0.1rem;
   top: 0;
   background-color: #aa2ee6;
-  color: white;
+  color: #fff;
   border-radius: 50%;
   font-size: 0.6rem;
   font-weight: bold;
@@ -977,6 +1183,7 @@ tbody tr:nth-child(even) {
   overflow-x: auto;
   scrollbar-color: auto;
   scrollbar-width: thin;
+  z-index: inherit;
 }
 .tab-selector::-webkit-scrollbar {
   width: 0rem;
@@ -1001,6 +1208,7 @@ tbody tr:nth-child(even) {
   min-width: -webkit-max-content;
   min-width: -moz-max-content;
   min-width: max-content;
+  position: relative;
 }
 .tab-selector_tab:hover {
   color: #23049d;
@@ -1023,7 +1231,7 @@ tbody tr:nth-child(even) {
   -webkit-animation: highlight ease-in-out 0.25s forwards;
           animation: highlight ease-in-out 0.25s forwards;
 }
-.tab-selector_exclamation::after, .tab-selector_error::after {
+.tab-selector_exclamation::after, .tab-selector_error::after, .tab-selector_completed::after {
   font-weight: bolder;
   margin-left: 0.5rem;
   border-radius: 50%;
@@ -1041,6 +1249,13 @@ tbody tr:nth-child(even) {
   content: "X";
   background: #f76363;
   font-size: 1.1rem;
+}
+.tab-selector_completed::after {
+  content: "✓";
+  background: #5ce49a;
+  font-size: 1rem;
+  transform: rotate(10deg);
+  color: #fff;
 }
 
 .form-info {
@@ -1065,12 +1280,107 @@ tbody tr:nth-child(even) {
   margin-bottom: 1rem;
 }
 .form-info_green {
-  background-color: #3cb371;
+  background-color: #5ce49a;
   color: #fff;
   margin-bottom: 1rem;
   overflow: hidden;
   -webkit-animation: short-life ease-in 4s forwards;
           animation: short-life ease-in 4s forwards;
+}
+
+.underlined {
+  position: relative;
+}
+.underlined::before {
+  content: "";
+  display: block;
+  position: absolute;
+  height: 3px;
+  background: linear-gradient(90deg, #23049d, #aa2ee6);
+  left: 0;
+  right: 0;
+  bottom: -2px;
+  border-radius: 2.5px;
+  width: 100%;
+}
+
+.check-container {
+  display: inline-block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  background-color: #fff;
+  cursor: pointer;
+  font-size: 1.2rem;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  width: 25%;
+  transition: all 0.3s ease-in-out;
+}
+@media (max-width: 59.9375em) {
+  .check-container {
+    width: 50%;
+  }
+}
+@media (max-width: 39.9375em) {
+  .check-container {
+    width: 100%;
+  }
+}
+.check-container:hover input ~ .check {
+  border: 1.5px solid #aa2ee6;
+}
+.check-container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+.check-container input:checked ~ .check {
+  background-color: #aa2ee6;
+  border: 1.5px solid #aa2ee6;
+}
+.check-container input:checked ~ .check:after {
+  display: block;
+}
+.check-container .check:after {
+  left: 7.5px;
+  top: 1px;
+  width: 0.5rem;
+  height: 1rem;
+  border: solid #fff;
+  border-width: 0 3px 3px 0;
+  transform: rotate(45deg);
+}
+
+.check {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #d7e3f5;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  border-radius: 0.2rem;
+}
+.check:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.checkboxs-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+}
+
+.table-container {
+  width: 100%;
+  overflow-x: auto;
 }
 
 .reveal {
@@ -1724,6 +2034,7 @@ tbody tr:nth-child(even) {
   }
 }
 .main__sub-heading {
+  width: 100%;
   font-size: 1.25rem;
   text-align: center;
 }
@@ -1771,6 +2082,7 @@ tbody tr:nth-child(even) {
   display: flex;
   flex-flow: column wrap;
   justify-content: center;
+  border-radius: 0.25rem;
 }
 @media (max-width: 59.9375em) {
   .main__form-container {
@@ -1778,12 +2090,45 @@ tbody tr:nth-child(even) {
     padding: 1rem;
   }
 }
+.main__form-container_shadowed {
+  background-color: #fff;
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+  margin: 0 auto;
+}
+.main__form-container_shadowed .tab-selector {
+  width: 100%;
+}
 .main__form {
+  max-width: 100%;
   padding: 3rem;
   padding-top: 0.5rem;
 }
 @media (max-width: 59.9375em) {
   .main__form {
+    padding: 0;
+    width: 100%;
+  }
+}
+.main__form_footer {
+  max-width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.main__form-section {
+  padding-top: 1rem;
+  position: relative;
+  width: 100%;
+}
+
+.grey-container {
+  height: 100%;
+  min-height: 95vh;
+  background-color: #eeeff2;
+  margin-top: -0.5rem;
+  padding: 1.5rem;
+}
+@media (max-width: 59.9375em) {
+  .grey-container {
     padding: 0;
   }
 }/*# sourceMappingURL=style.css.map */
